Fixes role=textbox div on Firefox

--- a/app/web-components/Contact/Contact.module.css
+++ b/app/web-components/Contact/Contact.module.css
@@ -109,6 +109,15 @@
     user-select: none;
 }
 
+.errorLabel {
+    padding-left: 4px;
+    font-size: 12px;
+    font-weight: 500;
+    font-style: italic;
+    text-transform: none;
+    color: var(--accent-3);
+}
+
 .inputContainer > div {
     display: flex;
     align-items: center;
